--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,7 +12,7 @@
         android:layout_width="275dp"
         android:layout_height="25dp"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="75dp"
         android:textColor="@color/white"
         android:background="@drawable/welcome"
         />
@@ -23,7 +23,7 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="175dp"
         android:src="@drawable/addevents" />
 
@@ -33,7 +33,7 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="200dp"
+        android:layout_marginStart="250dp"
         android:layout_marginTop="400dp"
         android:src="@drawable/viewevents" />
 
@@ -43,7 +43,7 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="200dp"
+        android:layout_marginStart="250dp"
         android:layout_marginTop="175dp"
         android:src="@drawable/sharemessages" />
 
@@ -53,7 +53,29 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="400dp"
         android:src="@drawable/viewparticipants" />
+
+    <ImageView
+        android:id="@+id/viewStudentsdetails"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="600dp"
+        android:src="@drawable/stddetails" />
+
+    <ImageView
+        android:id="@+id/sharemail"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="600dp"
+        android:src="@drawable/sharemail" />
+
+
 </RelativeLayout>
